--- a/styles/modules/blocks/first-screen/__bike-fix/_first-screen__bike-fix.scss
+++ b/styles/modules/blocks/first-screen/__bike-fix/_first-screen__bike-fix.scss
@@ -1,5 +1,5 @@
 .first-screen__bike-fix {
-    background-image: url("../../../../../images/cannondale_systemsix_himod.png");
+    background-image: url("../images/cannondale_systemsix_himod.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 340px 260px;
