--- a/styles/modules/variables/_variables.scss
+++ b/styles/modules/variables/_variables.scss
@@ -20,10 +20,10 @@ $tablet: 1160px;
     --minOpacity: .6;
     --normOpacity: .7;
     --maxOpacity: .75;
-    --sliderButtonPrevious: url("../../../images/previous-light.svg");
-    --sliderButtonNext: url("../../../images/next-light.svg");
-    --sun: url("../../../images/sun-light.svg");
-    --moon: url("../../../images/moon-light.svg");
+    --sliderButtonPrevious: url("../images/previous-light.svg");
+    --sliderButtonNext: url("../images/next-light.svg");
+    --sun: url("../images/sun-light.svg");
+    --moon: url("../images/moon-light.svg");
     --footerLogo: url("../images/footer-logo-light.svg");
     --selectArrow: url("../images/select-arrow-light.svg");
 }
@@ -39,10 +39,10 @@ html[data-theme='light'] {
     --minOpacity: .6;
     --normOpacity: .7;
     --maxOpacity: .75;
-    --sliderButtonPrevious: url("../../../images/previous-light.svg");
-    --sliderButtonNext: url("../../../images/next-light.svg");
-    --sun: url("../../../images/sun-light.svg");
-    --moon: url("../../../images/moon-light.svg");
+    --sliderButtonPrevious: url("../images/previous-light.svg");
+    --sliderButtonNext: url("../images/next-light.svg");
+    --sun: url("../images/sun-light.svg");
+    --moon: url("../images/moon-light.svg");
     --footerLogo: url("../images/footer-logo-light.svg");
     --selectArrow: url("../images/select-arrow-light.svg");
 }
@@ -58,10 +58,10 @@ html[data-theme='dark'] {
     --minOpacity: .5;
     --normOpacity: .5;
     --maxOpacity: .65;
-    --sliderButtonPrevious: url("../../../images/previous-dark.svg");
-    --sliderButtonNext: url("../../../images/next-dark.svg");
-    --sun: url("../../../images/sun-dark.svg");
-    --moon: url("../../../images/moon-dark.svg");
+    --sliderButtonPrevious: url("../images/previous-dark.svg");
+    --sliderButtonNext: url("../images/next-dark.svg");
+    --sun: url("../images/sun-dark.svg");
+    --moon: url("../images/moon-dark.svg");
     --footerLogo: url("../images/footer-logo-dark.svg");
     --selectArrow: url("../images/select-arrow-dark.svg");
 }
