--- a/styles/index.scss
+++ b/styles/index.scss
@@ -72,6 +72,10 @@
 @import "./modules/blocks/bikes/__photo/bikes__photo";
 @import "./modules/blocks/bikes/__capture/bikes__capture";
 
+@import "./modules/blocks/bikes/__slider-dots/bikes__slider-dots";
+@import "./modules/blocks/bikes/__slider-dot/bikes__slider-dot";
+@import "./modules/blocks/bikes/__slider-dot/_type/bikes__slider-dot_type_active";
+
 @import "./modules/blocks/trainings/trainings";
 @import "./modules/blocks/trainings/__title/trainings__title";
 @import "./modules/blocks/trainings/__paragraph/trainings__paragraph";
