--- a/styles/modules/blocks/bikes/__gallery-item/_mobile/_bikes__gallery-item_mobile_visible.scss.scss
+++ b/styles/modules/blocks/bikes/__gallery-item/_mobile/_bikes__gallery-item_mobile_visible.scss.scss
@@ -2,5 +2,6 @@
   .bikes__gallery-item_mobile_visible {
     display: flex;
     margin: 0 18px 0;
+    filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06));
   }
 }
