--- a/styles/modules/blocks/slider/__icon/_type/_slider__icon_type_tt.scss
+++ b/styles/modules/blocks/slider/__icon/_type/_slider__icon_type_tt.scss
@@ -4,13 +4,13 @@
 }
 
 @media screen and (max-width: 1280px) {
-    .slider__label_type_tt {
+    .slider__icon_type_tt {
         top: 65%;
     }
 }
   
 @media screen and (max-width: $mobile) {
-    .slider__label_type_tt {
+    .slider__icon_type_tt {
         top: 150px;
         left: 11px;
         width: 35px;
