--- a/styles/index.css
+++ b/styles/index.css
@@ -1075,13 +1075,13 @@ html[data-theme='dark'] {
 }
 
 @media screen and (max-width: 1280px) {
-  .slider__label_type_tt {
+  .slider__icon_type_tt {
     top: 65%;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .slider__label_type_tt {
+  .slider__icon_type_tt {
     top: 150px;
     left: 11px;
     width: 35px;
@@ -1345,7 +1345,6 @@ html[data-theme='dark'] {
   .bikes__gallery-item_mobile_visible {
     display: flex;
     margin: 0 18px 0;
-    filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06));
   }
 }
 
