--- a/styles/modules/variables/_variables.scss
+++ b/styles/modules/variables/_variables.scss
@@ -13,7 +13,7 @@ $tablet: 1160px;
     --backgroundColor: #f4f4f4;
     --textColor: #151515;
     --paragraphColor: #222;
-    --copyrightColor: #cfcfcf;
+    --copyrightColor: #ffffff;
     --sliderButton: #ebebeb;
     --lineColor: #D7D4D4;
     --footerColor: #efefef;
@@ -32,7 +32,7 @@ html[data-theme='light'] {
     --backgroundColor: #f4f4f4;
     --textColor: #151515;
     --paragraphColor: #222;
-    --copyrightColor: #cfcfcf;
+    --copyrightColor: #ffffff;
     --sliderButton: #ebebeb;
     --lineColor: #D7D4D4;
     --footerColor: #efefef;
@@ -51,7 +51,7 @@ html[data-theme='dark'] {
     --backgroundColor: #333;
     --textColor: #fff;
     --paragraphColor: #e6e6e6;
-    --copyrightColor: #565656;
+    --copyrightColor: #000000;
     --sliderButton: #434343;
     --lineColor: #707070;
     --footerColor: #2f2f2f;
