--- a/styles/modules/mixins/_mixins.scss
+++ b/styles/modules/mixins/_mixins.scss
@@ -8,7 +8,7 @@
   font-weight: 700;
   font-size: 55px;
   line-height: 60px;
-  letter-spacing: -.5px;
+  letter-spacing: -0.5px;
   margin: 0;
 }
 
@@ -71,25 +71,25 @@
 @mixin hoveredPlaceholder {
   &::-webkit-input-placeholder {
     color: var(--textColor);
-    transition: .3s;
+    transition: 0.3s;
     opacity: 1;
   }
 
   &:-moz-placeholder {
     color: var(--textColor);
-    transition: .3s;
+    transition: 0.3s;
     opacity: 1;
   }
 
   &::-moz-placeholder {
     color: var(--textColor);
-    transition: .3s;
+    transition: 0.3s;
     opacity: 1;
   }
 
   &:-ms-input-placeholder {
     color: var(--textColor);
-    transition: .3s;
+    transition: 0.3s;
     opacity: 1;
   }
 }
